@@ -350,9 +350,9 @@ br.1htm.fia <- fit.mpt(d.broeder, m.2htm, r.1htm, fia = 200000)
 br.1htm.ineq.fia <- fit.mpt(d.broeder, m.2htm, ir.1htm, fia = 200000)
 
 # Model selection using the FIA
-(br.select <- select.mpt(list(orig.2htm = br.2htm.fia, orig.2htm.ineq = br.2htm.ineq.fia,
-    res.2htm = br.2htm.res.fia, res.2htm.ineq = br.2htm.res.ineq.fia, 
-    orig.1htm = br.1htm.fia, orig.1htm.ineq = br.1htm.ineq.fia)))
+(br.select <- select.mpt(list(br.2htm.fia, br.2htm.ineq.fia, br.2htm.res.fia, 
+                              br.2htm.res.ineq.fia, br.1htm.fia, br.1htm.ineq.fia)))
+                              
 # The same results, ordered by FIA
 br.select[order(br.select[,"delta.FIA.sum"]),]
 
@@ -362,9 +362,7 @@ br.select[order(br.select[,"delta.FIA.sum"]),]
 # Hence, one should use the aggregated data for this analysis (not shown here)! 
 
 # Compare this with the model selection not using FIA:
-select.mpt(list(orig.2htm = br.2htm, orig.2htm.ineq = br.2htm.ineq, 
-        res.2htm = br.2htm.res, res.2htm.ineq = br.2htm.res.ineq, 
-        orig.1htm = br.1htm, orig.1htm.ineq = br.1htm.ineq))
+select.mpt(list(br.2htm, br.2htm.ineq, br.2htm.res, br.2htm.res.ineq, br.1htm, br.1htm.ineq))
 
 # Only use the aggregated data:
 d.broeder.agg <- colSums(d.broeder)
@@ -372,8 +370,7 @@ br.2htm.agg <- fit.mpt(d.broeder.agg, m.2htm)
 br.2htm.res.agg <- fit.mpt(d.broeder.agg, m.2htm, r.2htm)
 br.1htm.agg <- fit.mpt(d.broeder.agg, m.2htm, r.1htm)
 
-select.mpt(list(orig.2htm = br.2htm.agg, res.2htm = br.2htm.res.agg, 
-    orig.1htm = br.1htm.agg), output = "full")
+select.mpt(list(br.2htm.agg, br.2htm.res.agg, br.1htm.agg), output = "full")
 
 
 # compare speed of no multicore versus multicore for multiple datasets:
